Add : added delete button for cases page , added submit for respond button for cases , Refactor : Case Entity now contains a report class so we can see the foreign key names when getting cases list and report
